Updated endpoints for getting errors and statuses. DAT-1027
