# api_server/openapi_server/openapi/openapi.yaml
@@ -32,6 +32,56 @@ paths:
           description: No content
       summary: Get last 20 other build statuses
       x-openapi-router-controller: openapi_server.controllers.buildstatuses_controller
+  /build-statuses-other/{status}:
+    get:
+      description: Get a list of other build statuses by status, days and max rows
+      operationId: build_statuses_other_status_get
+      parameters:
+      - description: A unique status identifier
+        explode: false
+        in: path
+        name: status
+        required: true
+        schema:
+          enum:
+          - failing
+          - pending
+          - passing
+          type: string
+        style: simple
+      - description: Total days to include
+        explode: true
+        in: query
+        name: days
+        required: false
+        schema:
+          default: 7
+          type: integer
+        style: form
+      - description: Max rows to return
+        explode: true
+        in: query
+        name: maxRows
+        required: false
+        schema:
+          default: 20
+          type: integer
+        style: form
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/BuildOtherStatus'
+                type: array
+          description: Scheme with multiple other build statuses
+        204:
+          description: No content
+        404:
+          description: Status not of correct type
+      summary: Get other build statuses by conditions
+      x-openapi-router-controller: openapi_server.controllers.buildstatuses_controller
   /build-statuses-triggers:
     get:
       description: Get a list of all build trigger statuses
@@ -51,8 +101,27 @@ paths:
       x-openapi-router-controller: openapi_server.controllers.buildstatuses_controller
   /error-reporting:
     get:
-      description: Get a list of last 20 error reportings
+      description: Get a list of errors reportings by days and max rows
       operationId: error_reporting_get
+      parameters:
+      - description: Total days to include
+        explode: true
+        in: query
+        name: days
+        required: false
+        schema:
+          default: 7
+          type: integer
+        style: form
+      - description: Max rows to return
+        explode: true
+        in: query
+        name: maxRows
+        required: false
+        schema:
+          default: 20
+          type: integer
+        style: form
       responses:
         200:
           content:
@@ -64,7 +133,7 @@ paths:
           description: Scheme with multiple error reportings
         204:
           description: No content
-      summary: Get last 20 error reportings
+      summary: Get errors reportings by conditions
       x-openapi-router-controller: openapi_server.controllers.errorreporting_controller
 components:
   responses:
@@ -166,18 +235,13 @@ components:
     ErrorReport:
       example:
         id: 1a9390e9-4ac5-4527-8e5e-05d2d153ada0
-        json_payload: {}
         log_name: random-log-name
         receive_timestamp: 2019-09-01T12:00:00+02:00
         resource: {}
-        source_location: {}
-        text_payload: random-text-payload
         trace: random-trace
       properties:
         id:
           type: string
-        json_payload:
-          type: object
         log_name:
           type: string
         receive_timestamp:
@@ -185,20 +249,13 @@ components:
           type: string
         resource:
           type: object
-        source_location:
-          type: object
-        text_payload:
-          type: string
         trace:
           type: string
       required:
       - id
-      - json_payload
       - log_name
       - receive_timestamp
       - resource
-      - source_location
-      - text_payload
       - trace
       type: object
   securitySchemes:
